--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -78,3 +78,70 @@
   width: 100px;
   margin-bottom: 10px;
 }
+
+/* subscribe button */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-content {
+  background: white;
+  padding: 2rem;
+  border-radius: 20px;
+  width: 300px;
+  animation: slideUp 1s ease-in-out;
+}
+
+input {
+  width: 100%;
+  padding: 0.5rem;
+  color: black !important;
+  border: 1px solid grey;
+  outline: none;
+  margin-bottom: 10px !important;
+  border-radius: 5px;
+}
+
+button {
+  margin-bottom: 10px !important;
+  padding: 0.5rem 1rem;
+  background: rgb(1, 94, 125);
+  border-radius: 5px;
+  border: none;
+}
+
+button:hover {
+  background: rgb(1, 76, 101);
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
