--- a/client/src/styles/ProductDetailsStyles.css
+++ b/client/src/styles/ProductDetailsStyles.css
@@ -95,3 +95,65 @@
 .similar-products .card-img-top {
   height: 300px !important;
 }
+
+.similar-product-card {
+  margin: 1rem 2.5rem;
+}
+
+/* Reviews */
+
+.reviews {
+  margin-top: 50px !important;
+}
+.reviews h2,
+.similar-products h2 {
+  color: rgb(3, 96, 128);
+  font-weight: bold;
+  text-align: center;
+  opacity: 0.7;
+}
+
+.review-box {
+  /* background-color: rgb(3, 96, 128, 0.2); */
+  background-color: rgba(6, 140, 185, 0.2);
+  border-radius: 15px;
+  padding: 20px;
+  color: rgb(2, 76, 101);
+  margin: 2.2rem 2.4rem;
+  cursor: pointer;
+}
+
+.review-btn {
+  background-color: rgb(1, 110, 147);
+  color: white;
+  border-color: #036080;
+}
+
+.review-btn:hover {
+  background-color: rgb(20, 123, 158);
+  color: white;
+}
+
+.review-form input,
+.review-form textarea {
+  border: 1px solid rgb(5, 121, 160);
+}
+
+.review-form label {
+  color: rgb(5, 121, 160);
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.similar-products {
+  margin-top: 50px !important;
+}
+
+.login-msg {
+  color: rgb(237, 36, 36);
+  font-weight: bold;
+  text-align: center;
+  opacity: 0.9;
+  font-size: 20px;
+  margin-top: 20px;
+}
